--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>More Apps</title>
+  <title>My Apps</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
+      background-color: #f0f2f5;
       padding: 20px;
     }
 
@@ -14,44 +14,42 @@
       display: flex;
       align-items: center;
       background-color: #ffffff;
-      border: 2px solid #007BFF;
-      border-radius: 12px;
+      border: 2px solid #0070C9;
+      border-radius: 10px;
       padding: 12px 16px;
       margin-bottom: 15px;
       text-decoration: none;
-      color: #007BFF;
+      color: #0070C9;
       font-size: 18px;
-      transition: background-color 0.3s, transform 0.2s;
+      transition: background-color 0.3s ease, color 0.3s ease;
     }
 
     .app-button:hover {
-      background-color: #007BFF;
-      color: white;
-      transform: translateY(-2px);
+      background-color: #0070C9;
+      color: #fff;
     }
 
     .app-button img {
       width: 30px;
       height: 30px;
       margin-right: 12px;
-      border-radius: 6px;
     }
   </style>
 </head>
 <body>
 
-  <a href="https://example.com/app1" class="app-button" target="_blank">
-    <img src="https://via.placeholder.com/30" alt="App 1 Icon">
+  <a href="https://apps.apple.com/us/app/id1234567890" class="app-button" target="_blank">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/67/App_Store_%28iOS%29.svg" alt="App Store Icon">
     My First App
   </a>
 
-  <a href="https://example.com/app2" class="app-button" target="_blank">
-    <img src="https://via.placeholder.com/30" alt="App 2 Icon">
+  <a href="https://apps.apple.com/us/app/id2345678901" class="app-button" target="_blank">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/67/App_Store_%28iOS%29.svg" alt="App Store Icon">
     Puzzle Master
   </a>
 
-  <a href="https://example.com/app3" class="app-button" target="_blank">
-    <img src="https://via.placeholder.com/30" alt="App 3 Icon">
+  <a href="https://apps.apple.com/us/app/id3456789012" class="app-button" target="_blank">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/67/App_Store_%28iOS%29.svg" alt="App Store Icon">
     Fun Quiz Time
   </a>
 
