--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
 </head>
 <body>
 
+    <a href="https://apps.apple.com/us/app/id3456789012" class="app-button" target="_blank">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/67/App_Store_%28iOS%29.svg" alt="App Store Icon">
+    True Or False Master
+  </a>
+  
   <a href="https://apps.apple.com/us/app/id1234567890" class="app-button" target="_blank">
     <img src="https://upload.wikimedia.org/wikipedia/commons/6/67/App_Store_%28iOS%29.svg" alt="App Store Icon">
     My First App
