--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Apps</title>
   <style>
     body {
@@ -14,35 +15,38 @@
       display: flex;
       align-items: center;
       background-color: #ffffff;
-      border: 2px solid #0070C9;
-      border-radius: 10px;
-      padding: 12px 16px;
-      margin-bottom: 15px;
+      border: 3px solid #0070C9;
+      border-radius: 14px;
+      padding: 18px 20px;
+      margin-bottom: 20px;
       text-decoration: none;
       color: #0070C9;
-      font-size: 18px;
+      font-size: 20px;
+      font-weight: bold;
       transition: background-color 0.3s ease, color 0.3s ease;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     }
 
     .app-button:hover {
       background-color: #0070C9;
-      color: #fff;
+      color: #ffffff;
     }
 
     .app-button img {
-      width: 30px;
-      height: 30px;
-      margin-right: 12px;
+      width: 40px;
+      height: 40px;
+      margin-right: 16px;
     }
   </style>
 </head>
 <body>
 
+
     <a href="https://apps.apple.com/us/app/id3456789012" class="app-button" target="_blank">
     <img src="https://upload.wikimedia.org/wikipedia/commons/6/67/App_Store_%28iOS%29.svg" alt="App Store Icon">
     True Or False Master
   </a>
-  
+
   <a href="https://apps.apple.com/us/app/id1234567890" class="app-button" target="_blank">
     <img src="https://upload.wikimedia.org/wikipedia/commons/6/67/App_Store_%28iOS%29.svg" alt="App Store Icon">
     My First App
