--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 
     <a href="https://apps.apple.com/us/app/id3456789012" class="app-button" target="_blank">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/6/67/App_Store_%28iOS%29.svg" alt="App Store Icon">
+    <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple221/v4/26/40/db/2640dbef-611d-fb3e-545b-965db3273002/AppIcon-1x_U007emarketing-0-10-0-85-220-0.png/230x0w.webp" alt="App Store Icon">
     True Or False Master  
        <img src="https://upload.wikimedia.org/wikipedia/commons/6/67/App_Store_%28iOS%29.svg" alt="App Store Icon">
   </a>
