--- a/index.html
+++ b/index.html
@@ -62,8 +62,24 @@
   </a>
   
 
+      <a href="https://apps.apple.com/us/app/%D8%A7%D9%82%D9%88%D8%A7%D9%84-%D9%88%D8%AD%D9%83%D9%85-%D9%82%D8%B5%D9%8A%D8%B1%D8%A9-%D8%B9%D8%A8%D8%A7%D8%B1%D8%A7%D8%AA-%D9%82%D9%88%D9%8A%D8%A9/id6479449806" class="app-button" target="_blank">
+    <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple221/v4/c7/62/bc/c762bc84-7ac4-83e5-356e-3b0d72f15215/AppIcon-1x_U007emarketing-0-11-0-85-220-0.png/230x0w.webp" alt="App Store Icon">
+   اقوال وحكم قصيرة - عبارات قوية
+         <img src="https://upload.wikimedia.org/wikipedia/commons/6/67/App_Store_%28iOS%29.svg" alt="App Store Icon">
+  </a>
+  
 
+      <a href="https://apps.apple.com/us/app/100-%D8%A7%D9%82%D8%AA%D8%A8%D8%A7%D8%B3%D8%A7%D8%AA-%D9%82%D8%B5%D9%8A%D8%B1%D8%A9/id6741180372" class="app-button" target="_blank">
+    <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple221/v4/df/2e/59/df2e5906-7e49-60b5-3c35-04f1a38d3002/AppIcon-1x_U007emarketing-0-10-0-85-220-0.png/230x0w.webp" alt="App Store Icon">
+   +100 اقتباسات قصيرة
+         <img src="https://upload.wikimedia.org/wikipedia/commons/6/67/App_Store_%28iOS%29.svg" alt="App Store Icon">
+  </a>
 
+        <a href="https://apps.apple.com/us/app/%D8%AD%D9%83%D9%85-%D9%88%D8%A3%D9%85%D8%AB%D8%A7%D9%84-%D8%A7%D9%84%D8%B9%D8%B8%D9%85%D8%A7%D8%A1/id6670691436" class="app-button" target="_blank">
+    <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple221/v4/22/6b/95/226b957d-428a-849e-1333-e12ef80d7610/AppIcon-1x_U007emarketing-0-10-0-85-220-0.png/230x0w.webp" alt="App Store Icon">
+   حكم وأمثال العظماء
+         <img src="https://upload.wikimedia.org/wikipedia/commons/6/67/App_Store_%28iOS%29.svg" alt="App Store Icon">
+  </a>
   
 </body>
 </html>
