--- a/index.html
+++ b/index.html
@@ -84,19 +84,13 @@
 
 
   <div id="footer">
-	<a href="/index.html">Home</a> | 
-	<a href="/web/index.html">Web</a> |
-	<a href="/math/index.html">Math</a> | 
-	<a href="/electric/index.html">Electricity</a> |
-	<a href="/calc/index.html">Calculators</a> | 
-	<a href="/convert/index.html">Converters</a> |
-	<a href="/tools/index.html">Tools</a>
 	<p>&copy;  
-	<a href="/">RapidTables.com</a> | 
-	<a href="/about/about.html" rel="nofollow">About</a> | 
+	<a href="https://www.tooroq.com/">tooroq.com</a> | 
+	<a href="https://www.facebook.com/med8585/" rel="nofollow">Facebook</a> | 
+        <a href="https://api.whatsapp.com/send/?phone=212658691009" rel="nofollow">WhatsApp</a> | 
+	<a href="medsikb@gmail.com" rel="nofollow">Contacts</a> | 
 	<a href="/about/terms.html" rel="nofollow">Terms of Use</a> | 
-	<a href="/about/privacy.html" rel="nofollow">Privacy Policy</a> | 
-	<a href="/about/cookies.html" rel="nofollow">Manage Cookies</a>
+	<a href="https://www.tooroq.com/p/privacy-policy.html" rel="nofollow">Privacy Policy</a>
 	</p>
 </div>
 
