--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   </a>
 
 
-
+<center>
   <div id="footer">
 	<p>&copy;  
 	<a href="https://www.tooroq.com/">tooroq.com</a> | 
@@ -93,6 +93,7 @@
 	<a href="https://www.tooroq.com/p/privacy-policy.html" rel="nofollow">Privacy Policy</a>
 	</p>
 </div>
+</center>
 
   
 </body>
