--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
 	<a href="https://www.tooroq.com/">tooroq.com</a> | 
 	<a href="https://www.facebook.com/med8585/" rel="nofollow">Facebook</a> | 
         <a href="https://api.whatsapp.com/send/?phone=212658691009" rel="nofollow">WhatsApp</a> | 
-	<a href="medsikb@gmail.com" rel="nofollow">Contacts</a> | 
+	<a href="mailto:medsikb@gmail.com" rel="nofollow">Email</a> | 
+	<a href="https://www.tooroq.com/p/2012-24-medsikbgmailcom.html" rel="nofollow">Contacts</a> | 
 	<a href="/about/terms.html" rel="nofollow">Terms of Use</a> | 
 	<a href="https://www.tooroq.com/p/privacy-policy.html" rel="nofollow">Privacy Policy</a>
 	</p>
