--- a/index.html
+++ b/index.html
@@ -41,7 +41,13 @@
 </head>
 <body>
 
+    <a href="https://apps.apple.com/us/app/id6747460827" class="app-button" target="_blank">
+    <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple221/v4/f7/76/67/f77667d7-e4ba-30f1-5244-74c4d28aa0a4/AppIcon-1x_U007emarketing-0-11-0-85-220-0.png/230x0w.webp" alt="App Store Icon">
+    رتبها - لعبة كلمات مبعثرة
+       <img src="https://upload.wikimedia.org/wikipedia/commons/6/67/App_Store_%28iOS%29.svg" alt="App Store Icon">
+  </a>
 
+	
     <a href="https://apps.apple.com/us/app/true-or-false-master/id6744894879" class="app-button" target="_blank">
     <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple221/v4/47/42/87/47428788-481e-ef33-dda0-6b423835d102/AppIcon-1x_U007emarketing-0-11-0-85-220-0.png/230x0w.webp" alt="App Store Icon">
     صح أو خطأ: اسئلة عامة
